[project]
name = "mtga-launcher"
version = "0.1.0"
description = ""
authors = [
    {name = "hagilad",email = "gilad.hollander1@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pywin32 (>=310,<311)",
    "pygetwindow (>=0.0.9,<0.0.10)",
    "psutil (>=7.0.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"
mypy = "^1.16.1"
types-pywin32 = "^310.0.0.20250516"
types-psutil = "^7.0.0.20250601"


[tool.ruff]
lint.select = ["I", "F", "E", "W"]  # I = isort, F = pyflakes, E/W = flake8


[tool.mypy]
explicit_package_bases = true
strict = true
